[package]
name = "rabit"
version = "0.2.3"
authors = ["JohnbCoding <johnbcoding@gmail.com>"]
license = "MIT"
description = "A CLI tool to track your habits."
readme = "README.md"
homepage = "https://github.com/JohnBCoding/rabit"
repository = "https://github.com/JohnBCoding/rabit"
keywords = ["cli", "habit", "habits"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.31", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
